# flashquant

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml  wiki.yml
csrc/bindings/: codebook_bind.cpp  module.cpp  packing_bind.cpp  quantizer_bind.cpp
csrc/core/: codebook.cpp  codebook.h  packing.cpp  packing.h  quantizer.cpp  quantizer.h  rotation.cpp  rotation.h  types.h
csrc/cuda/: compress.cu  compress.cuh  decompress.cu  decompress.cuh  flash_attention.cu  flash_attention.cuh  fused_tq_attention.cu  paged_decode.cu  split_k_reduce.cu  utils.cuh
csrc/tests/: test_codebook.cpp  test_kernels.cpp  test_packing.cpp  test_quantizer.cpp  test_rotation.cpp
docs/: Algorithm-Deep-Dive.md  Architecture.md  CUDA-Kernels.md  Improvements-over-turboquant-vllm.md  Integration-Guide.md  Testing.md  index.md
src/flashquant/: __init__.py  _version.py  config.py  errors.py  profiling.py
src/flashquant/cache/: __init__.py  buffer_pool.py  hf_cache.py
src/flashquant/core/: __init__.py  codebook.py  compressor.py  packing.py  quantizer.py
src/flashquant/kernels/: __init__.py  attention.py  compress.py  cpu_reference.py  decompress.py  paged_decode.py
src/flashquant/vllm/: __init__.py  backend.py  compat.py  impl.py  registration.py  spec.py
tests/: conftest.py  test_adversarial.py  test_attention_kernel.py  test_buffer_pool.py  test_codebook.py  test_compress_kernel.py  test_compressor.py  test_config.py  test_decompress_kernel.py  test_hf_cache.py  test_long_context.py  test_numerical_bounds.py  test_packing.py  test_paged_decode_kernel.py  test_performance.py  test_quantizer_mse.py  test_quantizer_prod.py  test_rotation.py  test_vllm_impl.py  test_vllm_registration.py
wiki-content/: Algorithm-Deep-Dive.md  Architecture.md  CUDA-Kernels.md  Home.md  Improvements-over-turboquant-vllm.md  Integration-Guide.md  Testing.md  _Sidebar.md
